[package]
name = "logger"
version = "0.1.0"
authors = ["Sondre Knutsen <sondreknutsen1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
